// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's removeContactFromList destination action: default fields, group id only 1`] = `
Object {
  "anonymousId": "9fd11b29-45eb-43ad-8512-e286d3a80131",
  "anonymousIdsKey": "^&UUQt",
  "groupId": "group1234",
  "segmentId": "user1234",
  "segmentIdKey": "^&UUQt",
  "userIdentities": Object {
    "channels.email.address": "contact@example.com",
  },
}
`;

exports[`Testing snapshot for Cordial's removeContactFromList destination action: default fields, group name 1`] = `
Object {
  "anonymousId": "20ff54dd-9fd1-4b29-85eb-93ad4512e286",
  "anonymousIdsKey": "^&UUQt",
  "groupId": "group1234",
  "segmentId": "user1234",
  "segmentIdKey": "^&UUQt",
  "userIdentities": Object {
    "channels.email.address": "contact@example.com",
  },
}
`;
